objects/Success_Engagement__c.object
<CustomObject>
    <description>Execution of a Success Program</description>
    <fields>
        <fullName>ACV_At_Risk__c</fullName>
        <label>ACV At-Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account which the Success Engagement is being executed</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Success Engagements</relationshipLabel>
        <relationshipName>Success_Engagements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Reason__c</fullName>
        <label>Engagement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Enablement</fullName>
                </value>
                <value>
                    <fullName>Implementation Issue</fullName>
                </value>
                <value>
                    <fullName>Off-Roadmap</fullName>
                </value>
                <value>
                    <fullName>Partner Issue</fullName>
                </value>
                <value>
                    <fullName>Product Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>Outcome of the Success Engagement</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Re-Implemented</fullName>
                </value>
                <value>
                    <fullName>On-Roadmap</fullName>
                </value>
                <value>
                    <fullName>Attrition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>TEXT(Success_Program__r.Type__c)</formula>
        <inlineHelpText>This value is taken from the Success Program selected in this record.</inlineHelpText>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Success Program that should be implemented.  This field is used by a Flow to create Success Program Steps.</description>
        <inlineHelpText>Only Approved Success Programs will be available for selection.</inlineHelpText>
        <label>Success Program</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only approved success programs can be executed</errorMessage>
            <filterItems>
                <field>Success_Program__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Success_Program__c</referenceTo>
        <relationshipLabel>Success Engagements</relationshipLabel>
        <relationshipName>Success_Engagements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Success Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Success_Program__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Engagement_Reason__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Success Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>